# ROS-in-Five-Days

./: README.md
importing_python_modules/: README.md
importing_python_modules/common_pkg/: CMakeLists.txt  package.xml  setup.py
importing_python_modules/common_pkg/src/common_dir/: common_things.py
importing_python_modules/testing/: CMakeLists.txt  package.xml
importing_python_modules/testing/src/: test_import.py
mini_project/: CMakeLists.txt  README.md  package.xml
mini_project/launch/: my_launch.launch
mini_project/src/: mp_src01.py
my_ac_up_down/: CMakeLists.txt  README.md  package.xml
my_ac_up_down/launch/: my_launch.launch
my_ac_up_down/src/: my_action_client.py
my_action_client_square/: CMakeLists.txt  README.md  package.xml
my_action_client_square/launch/: my_launch.launch
my_action_client_square/src/: my_action_client.py
my_action_server_square/: CMakeLists.txt  README.md  package.xml
my_action_server_square/launch/: my_launch.launch
my_action_server_square/src/: my_action_server.py
my_ardrone_action_client/: CMakeLists.txt  package.xml
my_ardrone_action_client/launch/: my_launch.launch
my_ardrone_action_client/src/: ardrone_action_client.py
my_as_up_down/: CMakeLists.txt  README.md  package.xml
my_as_up_down/launch/: my_launch.launch
my_as_up_down/src/: my_action_server.py
my_custom_action_msg/: CMakeLists.txt  package.xml
my_custom_action_msg/action/: MyActionMsg.action
my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
my_logger_example/: CMakeLists.txt  README.md  package.xml
my_logger_example/launch/: my_launch.launch
my_logger_example/src/: logger_example.py
my_package/: CMakeLists.txt  asd.py  package.xml
my_package/launch/: my_package.launch
my_package/src/: my_package_python.py
my_publisher/: CMakeLists.txt  package.xml
my_publisher/launch/: my_launch.launch
my_publisher/src/: publisher_cmd_vel.py
my_service_client/: CMakeLists.txt  README.md  package.xml
my_service_client/launch/: launch_service.launch
my_service_client/src/: service_client.py
my_srv_server_custom/: CMakeLists.txt  package.xml
my_srv_server_custom/launch/: my_launch.launch
my_srv_server_custom/src/: custom_service_server.py
my_subscriber/: CMakeLists.txt  package.xml
my_subscriber/launch/: my_launch.launch
my_subscriber/msg/: Age.msg
my_subscriber/src/: subs_odom.py
square_traj_srv/: CMakeLists.txt  README.md  package.xml
square_traj_srv/launch/: launch_service.launch
square_traj_srv/src/: service_server.py
srv_and_pub/: CMakeLists.txt  README.md  package.xml
srv_and_pub/launch/: my_launch.launch
srv_and_pub/src/: publish_to_bb8.py
