<?xml version="1.0"?>
<package>
  <name>my_publisher</name>
  <version>0.0.0</version>
  <description>
      The my_publisher package
      Publishes data to /cmd_vel topic
      Data for Exercise:
      * The /cmd_vel topic is the topic used to move the robot.
        If I type "rostopic info /cmd_vel" I can see that It uses geometry_msgs/Twist messages.
      * In order to fill the Twist message, I need to create and instance of the message.
        In Python, this is done like: var = Twist().
      * To know the structure of the message I type: "rosmsg show Twist".
        I obtain: 
        - Vector3 linear:  float64 x, y, z
        - Vector3 angular: float64 x, y, z
      * In the simulation, the robot uses a differential drive plugin to move.
        This means that I need to fill the linear x and angular z components.
      * The magnitude are in m/s, so it's recommended to use values between 0 and 1.
        For example, 0'5.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/my_publisher</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>